--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -28,23 +28,20 @@
                         <ul class="navbar-nav mr-auto">
                           {{#if isCarerLoggedIn}}
                             <li><a href="/carer/dashboard">Dashboard</a></li>
-                            <li><a href="/carer/profile/{{currentUserInfo.carer._id}}">Edit profile</a></li>
-                            <li><a href="/carer/reviews/{{currentUserInfo.carer._id}}">View Reviews</a></li>
+                            <li><a href="/carer/profile/{{currentUserInfo.carer._id}}">Editar Perfil</a></li>
+                            <li><a href="/carer/reviews/{{currentUserInfo.carer._id}}">Ver Reviews</a></li>
                           {{else}}
                             <li class="nav-item">
-                                <a class="nav-link" href="./register.html">Register</a>
+                                <a class="nav-link" href="/signup">Registrarse</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./login.html">Login</a>
+                                <a class="nav-link" href="/login">Inciciar Sesión</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./contest.html">Wheel of Force!</a>
+                                <a class="nav-link" href="/profile">Mi cuenta</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./warsiepedia.html">Warsiepedia</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./faqs.html">FAQS</a>
+                                <a class="nav-link" href="/service">Pedir Letsdog</a>
                             </li>
                           {{/if}}
                         </ul>
