--- a/views/servicevalidation.hbs
+++ b/views/servicevalidation.hbs
@@ -7,7 +7,7 @@
 <p>Esperando la confirmación de </br><span id="carer-name"></span></p>
 
 <script>
-    Window.onload = () => {
+    window.onload = () => {
     let retrievedObject = localStorage.getItem("contract");
     let contract = JSON.parse(retrievedObject);
 
