--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -48,11 +48,11 @@
 
                             <div class="form-group wrapper-big-radio">
                                 <div class="big-radio">
-                                    <input class="form-control" type="radio" name="signupDogSex" value="female" checked>
+                                    <input data-value="female" checked value="female" class="form-control" type="radio" name="signupDogSex">
                                     <label>Es perra</label>
                                 </div>
                                 <div class="big-radio">
-                                    <input class="form-control" type="radio" name="signupDogSex" value="male">
+                                    <input data-value="male" class="form-control" value="male" type="radio" name="signupDogSex">
                                     <label>Es perro</label>
                                 </div>
                             </div>
@@ -91,7 +91,7 @@
                             </div>
 
                             <div class="form-group">
-                                <select id="signupDogAge" class="custom-select">
+                                <select id="signupDogSize" class="custom-select">
                                     <option value="init">Selecciona una Tamaño</option>
                                     <option value="small">Pequeño</option>
                                     <option value="medium">Mediano</option>
@@ -122,7 +122,8 @@
             </div>
         </div>
         <button type="button" id="btnValidateEmail" class="btn btn-primary btn-lg" disabled="disabled">Continuar</button>
-        <button type="button" id="btnContinueSignup" class="btn btn-primary btn-lg d-none" disabled="disabled">Continuar</button>
+        <button type="button" id="btnContinueSignup2" class="btn btn-primary btn-lg d-none" disabled="disabled">Continuar</button>
+        <button type="button" id="btnContinueSignup3" class="btn btn-primary btn-lg d-none" disabled="disabled">Continuar</button>
         <p class="small-link">¿Ya tienes una cuenta? <a href="/login">Iniciar sesión</a></p>
     </section>
 </main>
