Working on payment-method

--- a/views/carer-profile.hbs
+++ b/views/carer-profile.hbs
@@ -37,7 +37,7 @@
     console.log(contract);
     localStorage.setItem("contract", JSON.stringify(contract));
 
-    window.location.assign("/servicevalidation")
+    window.location.assign("/validation")
 
     });
 
