Edits to payment method

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -31,11 +31,11 @@
         </p>
       {{/if}}
       <div class="box-main_footer">
-        <a id="btnContinueSignup" class="btn btn-primary btn-lg">Inciniciar sesión</a>
+        <a id="btnContinueSignup" class="btn btn-primary btn-lg">iniciar sesión</a>
         <p class="small-link">No estamos registrados <a href="/signup">Registrarse</a></p>
       </div>
 
     </section>
 </main>
 
-<script src="/javascripts/Form.js"></script>
+<script src="/javascripts/Forms.js"></script>
