--- a/public/stylesheets/components/_priceCard.scss
+++ b/public/stylesheets/components/_priceCard.scss
@@ -1,5 +1,5 @@
 .intervalCard{
-    padding: 24px 15px;
+    padding: 24px 12px;
     border-radius: 20px;
     background-color: $beige-color;
     margin: 0;
@@ -25,5 +25,18 @@
         font-size: 1.9rem;
         color: $dark-color;
         font-weight: 500;
+        color: darken($color: $dark-color, $amount: 20);
+    }
+
+    .intervalTime {
+        font-size: 2.5rem;
+        font-weight: 700;
+        color: darken($color: $dark-color, $amount: 20);
+
+        span{
+            font-size: 1.6rem;
+            font-weight: 300;
+            padding-left: 3px;
+        }
     }
 }
