--- a/public/stylesheets/components/_priceCard.scss
+++ b/public/stylesheets/components/_priceCard.scss
@@ -33,7 +33,7 @@
         font-weight: 700;
         color: darken($color: $dark-color, $amount: 20);
 
-        span{
+        span:last-child{
             font-size: 1.6rem;
             font-weight: 300;
             padding-left: 3px;
