--- a/public/stylesheets/_pages.scss
+++ b/public/stylesheets/_pages.scss
@@ -2,3 +2,5 @@
 @import './pages/signup';
 @import './pages/login';
 @import './pages/service';
+@import './pages/map-location';
+@import './pages/dashboard';
