--- a/public/stylesheets/pages/_service.scss
+++ b/public/stylesheets/pages/_service.scss
@@ -6,7 +6,8 @@
     min-height: calc(100vh - 56px);
     background-image: url('../../images/home-bg.jpg');
     background-size: contain;
-    background-position: center 40px;
+    background-position: center -16px;
+    background-repeat: no-repeat;
 
     .box-main{
         min-height: auto;
