--- a/views/carer/dashboard.hbs
+++ b/views/carer/dashboard.hbs
@@ -1,5 +1,8 @@
-<h1>DahsBoard</h1>
-<p>Hola {{currentUserInfo.carer.name}}!</p>
+<main class="v-dashboard">
+    <h1>DahsBoard</h1>
+    <p>Hola {{currentUserInfo.carer.name}}!</p>
+</main>
+
 
 <script src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
 <script src="/javascripts/User.js"></script>
