--- a/views/setup.hbs
+++ b/views/setup.hbs
@@ -2,37 +2,28 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
 <script src="https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.js"></script>
 <link href="https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css" rel="stylesheet" />
-<style>
-    body {
-        margin: 0;
-        padding: 0;
-    }
 
-    #map {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        width: 100%;
-        margin-top: 75px;
-    }
+<main class="v-service-map-location">
+    <section class="subHeader">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="subHeader_content">
+                        <a id="backLink" href="/"><span class="icon-back_arrow"></span></a>
+                        <button id="backSplide"class="d-none"><span class="icon-back_arrow"></span></button>
+                        <h1>¿Dónde te cuentras?</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div id="map"></div>
+    <section class="box-main">
+        <div id="geocoder" class="geocoder"></div>
+        <button id="search-carers" class="btn btn-primary btn-lg" type="button">Buscar LetsDogs!</button>
+    </section>
+</main>
 
-    .geocoder {
-        position: absolute;
-        z-index: 1;
-        width: 70%;
-        left: 50%;
-        margin-left: -35%;
-        bottom: 20px;
-    }
-
-    .mapboxgl-ctrl-geocoder {
-        min-width: 100%;
-    }
-</style>
-
-<div id="map"></div>
-<div id="geocoder" class="geocoder"></div>
-<button id="search-carers" class="btn btn-primary btn-lg" type="button">Buscar LetsDogs!</button>
 
 
 
@@ -44,6 +35,5 @@
 <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script>
 <script src="./../javascripts/services/apiService.js"></script>
 <script src="./../javascripts/User.js"></script>
-
 <script src="./../javascripts/map.js"></script>
 
