--- a/public/stylesheets/pages/_dashboard.scss
+++ b/public/stylesheets/pages/_dashboard.scss
@@ -2,7 +2,7 @@
     min-height: calc(100vh - #{$headerheight});
     position: relative;
     padding: 24px;
-    background-color: $beige-color;
+    background-color: white;
 
     .home-buttons{
         position: relative;
