--- a/public/stylesheets/base/_iconfonts.scss
+++ b/public/stylesheets/base/_iconfonts.scss
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'icomoon';
-    src:  url('../../fonts/icomoon.eot?ojupu8');
-    src:  url('../../fonts/icomoon.eot?ojupu8#iefix') format('embedded-opentype'),
-      url('../../fonts/icomoon.woff2?ojupu8') format('woff2'),
-      url('../../fonts/icomoon.ttf?ojupu8') format('truetype'),
-      url('../../fonts/icomoon.woff?ojupu8') format('woff'),
-      url('../../fonts/icomoon.svg?ojupu8#icomoon') format('svg');
+    src:  url('../../fonts/icomoon.eot?jcoxoe');
+    src:  url('../../fonts/icomoon.eot?jcoxoe#iefix') format('embedded-opentype'),
+      url('../../fonts/icomoon.woff2?jcoxoe') format('woff2'),
+      url('../../fonts/icomoon.ttf?jcoxoe') format('truetype'),
+      url('../../fonts/icomoon.woff?jcoxoe') format('woff'),
+      url('../../fonts/icomoon.svg?jcoxoe#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: block;
@@ -27,6 +27,9 @@
   }
   
 
+  .icon-editar:before {
+    content: "\e906";
+  }
   .icon-huella:before {
     content: "\e905";
   }
