--- a/public/stylesheets/components/_avatar.scss
+++ b/public/stylesheets/components/_avatar.scss
@@ -8,7 +8,8 @@
     }
 }
 
-.avatar {
+.avatar,
+.profile-banner {
 
     border-radius: 100%;
     width: 120px;
@@ -44,7 +45,12 @@
     }
 
     &:hover {
-        background-color: rgba(0, 0, 0, 0.4);
+        background-color: rgba($primary-color, 0.4);
+
+        &:before{
+            color: #fff;
+        }
+        
     }
 
     &.cover {
@@ -56,4 +62,11 @@
             opacity: 0;
         }
     }
+}
+
+.profile-banner{
+    width: 100%;
+    border-radius: 10px;
+    margin-top: 10px;
+    height: 200px;
 }
