--- a/public/stylesheets/pages/_signup.scss
+++ b/public/stylesheets/pages/_signup.scss
@@ -5,7 +5,9 @@
     justify-content: space-between;
 
     .box-main{
-        min-height: calc(100vh - 150px);
+        position: absolute;
+        bottom: 0;
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -70,5 +72,14 @@
 
     .avatar{
         margin-top: 20px;
+    }
+}
+
+#carerArea {
+
+    background-color: $beige-color;
+
+    .box-main{
+        position: relative;
     }
 }
