--- a/views/carer/profile.hbs
+++ b/views/carer/profile.hbs
@@ -1,82 +1,127 @@
-<h1> Profile - carer</h1>
-<section>
-    <p>Puntuación actual: {{carer.rate}}/5</p>
-</section>
-<section>
-    <div>
-        <label for="carerNameInput">Nombre</label>
-        <input data-field="editable" type="text" name="name" id="carerNameInput" placeholder="Escribe tu nombre" value="{{carer.name}}">
-        <button data-btn="modify" data-model="Carer" data-id="carerNameInput" type="button">Modificar</button>
-    </div>
-</section>
-<section>
-    <div>
-        <label>Descripción</label>
-        <textarea data-field="editable"  name="description" id="carerDescriptionInput">{{carer.description}}</textarea>
-        <button data-btn="modify" data-model="Carer" type="button" data-id="carerDescriptionInput">Modificar</button>
-    </div>
-</section> 
-    <div>
-        <label>Teléfono</label>
-        <div>
-            <select id="carerPrefixPhoneInput" name="phone.prefix" data-field="editable" >
-                {{#select carer.phone.prefix}}
-                <option data-countryCode="DZ" value="213">Algeria (+213)</option>
-                <option data-countryCode="AD" value="376">Andorra (+376)</option>
-                <option data-countryCode="AO" value="244">Angola (+244)</option>
-                <option data-countryCode="AI" value="1264">Anguilla (+1264)</option>
-                <option data-countryCode="AG" value="1268">Antigua &amp; Barbuda (+1268)</option>
-                <option data-countryCode="AR" value="54">Argentina (+54)</option>
-                <option data-countryCode="AM" value="374">Armenia (+374)</option>
-                <option data-countryCode="AW" value="297">Aruba (+297)</option>
-                <option data-countryCode="AU" value="61">Australia (+61)</option>
-                <option data-countryCode="AT" value="43">Austria (+43)</option>
-                <option data-countryCode="AZ" value="994">Azerbaijan (+994)</option>
-                <option data-countryCode="BS" value="1242">Bahamas (+1242)</option>
-                <option data-countryCode="BH" value="973">Bahrain (+973)</option>
-                <option data-countryCode="BD" value="880">Bangladesh (+880)</option>
-                <option data-countryCode="BB" value="1246">Barbados (+1246)</option>
-                <option data-countryCode="BY" value="375">Belarus (+375)</option>
-                <option data-countryCode="BE" value="32">Belgium (+32)</option>
-                <option data-countryCode="BZ" value="501">Belize (+501)</option>
-                <option data-countryCode="BJ" value="229">Benin (+229)</option>
-                <option data-countryCode="BM" value="1441">Bermuda (+1441)</option>
-                <option data-countryCode="BT" value="975">Bhutan (+975)</option>
-                <option data-countryCode="BO" value="591">Bolivia (+591)</option>
-                <option data-countryCode="BA" value="387">Bosnia Herzegovina (+387)</option>
-                <option data-countryCode="BW" value="267">Botswana (+267)</option>
-                <option data-countryCode="BR" value="55">Brazil (+55)</option>
-                <option data-countryCode="BN" value="673">Brunei (+673)</option>
-                <option data-countryCode="BG" value="359">Bulgaria (+359)</option>
-                <option data-countryCode="BF" value="226">Burkina Faso (+226)</option>
-                <option data-countryCode="BI" value="257">Burundi (+257)</option>
-                <option data-countryCode="KH" value="855">Cambodia (+855)</option>
-                <option data-countryCode="CM" value="237">Cameroon (+237)</option>
-                <option data-countryCode="CA" value="1">Canada (+1)</option>
-                <option data-countryCode="CV" value="238">Cape Verde Islands (+238)</option>
-                <option data-countryCode="KY" value="1345">Cayman Islands (+1345)</option>
-                <option data-countryCode="CF" value="236">Central African Republic (+236)</option>
-                <option data-countryCode="CL" value="56">Chile (+56)</option>
-                <option data-countryCode="CN" value="86">China (+86)</option>
-                <option data-countryCode="CO" value="57">Colombia (+57)</option>
-                <option data-countryCode="KM" value="269">Comoros (+269)</option>
-                <option data-countryCode="CG" value="242">Congo (+242)</option>
-                <option data-countryCode="CK" value="682">Cook Islands (+682)</option>
-                <option data-countryCode="CR" value="506">Costa Rica (+506)</option>
-                <option data-countryCode="HR" value="385">Croatia (+385)</option>
-                <option data-countryCode="CU" value="53">Cuba (+53)</option>
-                <option data-countryCode="CY" value="90392">Cyprus North (+90392)</option>
-                <option data-countryCode="CY" value="357">Cyprus South (+357)</option>
-                <option data-countryCode="CZ" value="42">Czech Republic (+42)</option>
-                <option data-countryCode="DK" value="45">Denmark (+45)</option>
-                <option data-countryCode="DJ" value="253">Djibouti (+253)</option>
-                <option data-countryCode="DM" value="1809">Dominica (+1809)</option>
-                <option data-countryCode="DO" value="1809">Dominican Republic (+1809)</option>
-                <option data-countryCode="EC" value="593">Ecuador (+593)</option>
-                <option data-countryCode="EG" value="20">Egypt (+20)</option>
-                <option data-countryCode="SV" value="503">El Salvador (+503)</option>
-                <option data-countryCode="GQ" value="240">Equatorial Guinea (+240)</option>
-                <option data-countryCode="ER" value="291">Eritrea (+291)</option>
+<main id="carerArea" class="v-profile">
+    <section class="pofile-heroBanner" style="background-image: url('{{carer.gallery}}');">
+        <section class="subHeader light-mode">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="subHeader_content">
+                            <a id="backLink" href="/carer/dashboard" class="text-dark"><span class="icon-back_arrow"></span></a>
+                            <button id="backSplide"class="d-none"><span class="icon-back_arrow"></span></button>
+                            <h1>Tu Perfil</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <form enctype="multipart/form-data" id="photoCarerAvatarForm" data-fieldId="photoCarerAvatarInputFile" class="profile-avatar">
+            <div id="photoCarerAvatarPreview" class="profile avatar cover" style="background-image: url('{{carer.profilePhoto}}')"></div>
+            <input data-field="editable"  id="photoCarerAvatarInputFile" type="file" class="d-none">
+            <input id="photoCarerAvatarBtnSubmit" type="submit" class="d-none">
+            <input type="hidden" id="photoCarerAvatarInputFileUrl" class="d-none" name="profilePhoto">
+            <button data-btn="modify" data-model="Carer" type="button" class="d-none" data-id="photoCarerAvatarInputFileUrl">Modificar</button>
+        </form>
+    </section>
+    <div class="box-main">
+        <section class="profile-subHeader form-row mt-0">
+            <div class="profile-subHeader_name">
+                <div class="profile-field form-group editField">
+                    <div class="editField_label">
+                        <label>Nombre</label>
+                        <button data-btn="modify" data-model="Carer" data-id="carerNameInput" type="button"><span class="icon-editar"></span></button>
+                    </div>
+                    <input data-field="editable" type="text" name="name" id="carerNameInput" class="form-control" value="{{carer.name}}">
+                </div>
+            </div>
+            <div class="profile-field profile-score">
+                <p class="profile-score_title">Puntuación actual:</p>
+                <div class="profile-score_bones">
+                    <span>{{carer.rate}}</span>
+                    <span>
+                        {{#times carer.rate}}
+                            <span class="icon-bone"></span>
+                        {{/times}}
+                    </span>
+                </div>
+            </div>
+        </section>
+        <section class="form-row">
+            <div class="editField_label">
+                <label for="carerEmailInput"> Email </label>
+                <button data-btn="modify" data-model="User" data-id="carerEmailInput" type="button">Modificar</button>
+            </div>
+            <input data-field="editable"  type="email" data-model="User" name="email" id="carerEmailInput" placeholder="Escribe unemail" value="{{carer.userId.email}}">
+        </section>
+        <section class="form-row">
+            <div class="editField_label">
+                <label>Descripción</label>
+                <button data-btn="modify" data-model="Carer" type="button" data-id="carerDescriptionInput">Modificar</button>
+            </div>
+            <textarea data-field="editable"  name="description" id="carerDescriptionInput">{{carer.description}}</textarea>
+        </section>
+        <section class="form-row">
+            <div class="prefixCol">
+                <div class="editField_label">
+                    <label>Prefijo</label>
+                    <button data-btn="modify" data-model="Carer" data-id="carerPrefixPhoneInput" type="button">Modificar</button>
+                </div>
+                <select id="carerPrefixPhoneInput" name="phone.prefix" data-field="editable" >
+                    {{#select carer.phone.prefix}}
+                    <option data-countryCode="DZ" value="213">Algeria (+213)</option>
+                    <option data-countryCode="AD" value="376">Andorra (+376)</option>
+                    <option data-countryCode="AO" value="244">Angola (+244)</option>
+                    <option data-countryCode="AI" value="1264">Anguilla (+1264)</option>
+                    <option data-countryCode="AG" value="1268">Antigua &amp; Barbuda (+1268)</option>
+                    <option data-countryCode="AR" value="54">Argentina (+54)</option>
+                    <option data-countryCode="AM" value="374">Armenia (+374)</option>
+                    <option data-countryCode="AW" value="297">Aruba (+297)</option>
+                    <option data-countryCode="AU" value="61">Australia (+61)</option>
+                    <option data-countryCode="AT" value="43">Austria (+43)</option>
+                    <option data-countryCode="AZ" value="994">Azerbaijan (+994)</option>
+                    <option data-countryCode="BS" value="1242">Bahamas (+1242)</option>
+                    <option data-countryCode="BH" value="973">Bahrain (+973)</option>
+                    <option data-countryCode="BD" value="880">Bangladesh (+880)</option>
+                    <option data-countryCode="BB" value="1246">Barbados (+1246)</option>
+                    <option data-countryCode="BY" value="375">Belarus (+375)</option>
+                    <option data-countryCode="BE" value="32">Belgium (+32)</option>
+                    <option data-countryCode="BZ" value="501">Belize (+501)</option>
+                    <option data-countryCode="BJ" value="229">Benin (+229)</option>
+                    <option data-countryCode="BM" value="1441">Bermuda (+1441)</option>
+                    <option data-countryCode="BT" value="975">Bhutan (+975)</option>
+                    <option data-countryCode="BO" value="591">Bolivia (+591)</option>
+                    <option data-countryCode="BA" value="387">Bosnia Herzegovina (+387)</option>
+                    <option data-countryCode="BW" value="267">Botswana (+267)</option>
+                    <option data-countryCode="BR" value="55">Brazil (+55)</option>
+                    <option data-countryCode="BN" value="673">Brunei (+673)</option>
+                    <option data-countryCode="BG" value="359">Bulgaria (+359)</option>
+                    <option data-countryCode="BF" value="226">Burkina Faso (+226)</option>
+                    <option data-countryCode="BI" value="257">Burundi (+257)</option>
+                    <option data-countryCode="KH" value="855">Cambodia (+855)</option>
+                    <option data-countryCode="CM" value="237">Cameroon (+237)</option>
+                    <option data-countryCode="CA" value="1">Canada (+1)</option>
+                    <option data-countryCode="CV" value="238">Cape Verde Islands (+238)</option>
+                    <option data-countryCode="KY" value="1345">Cayman Islands (+1345)</option>
+                    <option data-countryCode="CF" value="236">Central African Republic (+236)</option>
+                    <option data-countryCode="CL" value="56">Chile (+56)</option>
+                    <option data-countryCode="CN" value="86">China (+86)</option>
+                    <option data-countryCode="CO" value="57">Colombia (+57)</option>
+                    <option data-countryCode="KM" value="269">Comoros (+269)</option>
+                    <option data-countryCode="CG" value="242">Congo (+242)</option>
+                    <option data-countryCode="CK" value="682">Cook Islands (+682)</option>
+                    <option data-countryCode="CR" value="506">Costa Rica (+506)</option>
+                    <option data-countryCode="HR" value="385">Croatia (+385)</option>
+                    <option data-countryCode="CU" value="53">Cuba (+53)</option>
+                    <option data-countryCode="CY" value="90392">Cyprus North (+90392)</option>
+                    <option data-countryCode="CY" value="357">Cyprus South (+357)</option>
+                    <option data-countryCode="CZ" value="42">Czech Republic (+42)</option>
+                    <option data-countryCode="DK" value="45">Denmark (+45)</option>
+                    <option data-countryCode="DJ" value="253">Djibouti (+253)</option>
+                    <option data-countryCode="DM" value="1809">Dominica (+1809)</option>
+                    <option data-countryCode="DO" value="1809">Dominican Republic (+1809)</option>
+                    <option data-countryCode="EC" value="593">Ecuador (+593)</option>
+                    <option data-countryCode="EG" value="20">Egypt (+20)</option>
+                    <option data-countryCode="SV" value="503">El Salvador (+503)</option>
+                    <option data-countryCode="GQ" value="240">Equatorial Guinea (+240)</option>
+                    <option data-countryCode="ER" value="291">Eritrea (+291)</option>
                 <option data-countryCode="EE" value="372">Estonia (+372)</option>
                 <option data-countryCode="ET" value="251">Ethiopia (+251)</option>
                 <option data-countryCode="FK" value="500">Falkland Islands (+500)</option>
@@ -236,44 +281,18 @@
                 <option data-countryCode="ZM" value="260">Zambia (+260)</option>
                 <option data-countryCode="ZW" value="263">Zimbabwe (+263)</option>
                 {{/select}}
-            </select>
-            <button data-btn="modify" data-model="Carer" data-id="carerPrefixPhoneInput" type="button">Modificar</button>
-        </div>
-        <div>
-            <input data-field="editable"  type="number" name="phone.number" id="carerPhoneInput" placeholder="Escribe tu teléfono" value="{{carer.phone.number}}">
-            <button data-btn="modify" data-model="Carer" data-id="carerPhoneInput" type="button">Modificar</button>
-        </div>
-        
+                </select>
+            </div>
+            <div class="phoneCol">
+                <div class="editField_label">
+                    <label>Teléfono</label>
+                    <button data-btn="modify" data-model="Carer" data-id="carerPrefixPhoneInput" type="button">Modificar</button>
+                </div>
+                <input data-field="editable"  type="number" name="phone.number" id="carerPhoneInput" placeholder="Escribe tu teléfono" value="{{carer.phone.number}}">
+            </div>
+        </section>
     </div>
-<section>
-    <div>
-        <label for="carerEmailInput"> Email </label>
-        <input data-field="editable"  type="email" data-model="User" name="email" id="carerEmailInput" placeholder="Escribe unemail" value="{{carer.userId.email}}">
-        <button data-btn="modify" data-model="User" data-id="carerEmailInput" type="button">Modificar</button>
-    </div>
-</section>
-
-<section>
-    <h3>Foto de Avatar</h3>
-    <form enctype="multipart/form-data" id="photoCarerAvatarForm" data-fieldId="photoCarerAvatarInputFile">
-        <div id="photoCarerAvatarPreview" class="profile cover" style="background-image: url('{{carer.profilePhoto}}')"></div>
-        <input data-field="editable"  id="photoCarerAvatarInputFile" type="file">
-        <input id="photoCarerAvatarBtnSubmit" type="submit">
-        <input type="hidden" id="photoCarerAvatarInputFileUrl" name="profilePhoto">
-        <button data-btn="modify" data-model="Carer" type="button" data-id="photoCarerAvatarInputFileUrl">Modificar</button>
-    </form>
-</section>
-
-<section>
-    <form enctype="multipart/form-data" id="photoCarerBannerProfileForm" data-fieldId="photoCarerBannerProfileInputFile">
-        <div id="photoCarerBannerProfilePreview" class="profile cover profile-banner" style="background-image: url('{{carer.gallery}}');"></div>
-        <p>Foto de Perfil</p>
-        <input data-field="editable" id="photoCarerBannerProfileInputFile" type="file">
-        <input id="photoCarerBannerProfileBtnSubmit" type="submit">
-        <input type="hidden" id="photoCarerBannerProfileInputFileUrl" name="gallery">
-        <button data-btn="modify" data-model="Carer" type="button" data-id="photoCarerBannerProfileInputFileUrl">Modificar</button>
-    </form>
-</section>
+</main>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="/javascripts/carer/EditCarerValidator.js"></script>
 <script src="/javascripts/carer/EditCarer.js"></script>
